
2010-05-21: try-sqlite.py

	* SQLite を使ってみる。

2010-05-18: simple-usage-reportlab-template.py,simple-usage-reportlab-template.txt
	* 差し込み印刷のように PDF を生成する。

2010-05-17: extract-events-from-icalendar.py,extract-events-from-icalendar.ics [deleted]

	* iCalendar から指定した期間のイベントを抽出する。

2010-05-10: csv2htmllist.py [deleted]

	* CSV ファイルから Web サイト用のメニューを作る。

2010-05-06: patch-split.sh
	* パッチファイルを分割する。

2010-05-01: gdata-spredsheets-list.py
	* Google Spreadsheets のファイル一覧を取得する。

2010-04-29: count-files-per-suffix.py
	* 拡張子ごとのファイル数を集計する。

2010-04-26: yaml2json.py
	* YAML を JSON に変換する。

2010-04-25: remove-empty-dir.py
	* 空のディレクトリ (隠しファイルひとつのものも含む) を削除する。

2010-04-22: build-python-mysqldb.sh [setup]
	* MySQLdb をインストールする。

2010-04-21: gdata-client-login.py
	* Google Data API のクライアントライブラリでログインする。

2010-04-20: gmail-messages-and-labels.py,gmail-messages-and-labels.json
	* Gmail のラベル一覧と INBOX の中身一覧を取得する。設定ファイル必要。

2010-04-18: url-shortener.sh
	* "goo.gl" で URL を短縮する。

2010-04-16: svncounts-one-month-commits.sh
	* Subversion の直近一ヶ月のコミッタごとのコミット数を表示する。

2010-04-15: setup-macosx-java-version.sh [setup]
	* MacOSX の Java のバージョンを変更する。

2010-04-14: setup-sshkey.sh
	* ssh のクライアント側の設定をする。

2010-04-13: clean-source-expand-tab.py [deleted]

	* タブを空白４つに変換して末尾の空白文字を取り除く。

2010-04-12: setup-gitconfig.sh [setup]
	* git を設定する。

2010-04-08: simple-usage-pil-thumbnail.py
	* サムネイル画像を作成する。

2010-04-06: simple-usage-pil-image-size.py
	* 画像の大きさを表示する。

2010-04-05: build-python-pil.sh [setup]
	* PIL をインストールする。
		Install PIL, Python Image Library.

2010-04-03: build-mariadb.sh [setup]
	* MariaDB をソースからビルドする。

2010-03-30: rfc-page-split.sh
	* RFC をページごとに分割する。
		Split RFC texts page by page

2010-03-29: svnadd-unversioned-files.sh
	* Subversion で管理されていないファイルを追加する。
		Add un-versioned files into subversion realm

2010-03-38: simple-usage-reportlab.py,simple-usage-reportlab.txt
	* ReportLab を使って PDF を生成する。
		Generate pdf file containing Japanese with "ReportLab".

2010-03-27: build-python-reportlab.sh [setup]